--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </header>
 
     <main class="pokemon-slider">
-        <button>
-            <img src="./src/img/seta.png" alt="arrow-back" class="btn arrow-back">
+        <button class="btn arrow-back">
+            <img src="./src/img/seta.png" alt="arrow-back" >
         </button>
 
         <ul class="poke-list">
@@ -82,8 +82,8 @@
             </li>
         </ul>
 
-        <button>
-            <img src="./src/img/seta.png" alt="arrow-foward" class="btn arrow-foward">
+        <button class="btn arrow-foward">
+            <img src="./src/img/seta.png" alt="arrow-foward" >
         </button>
     </main>
 
