--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="pokemon-slider">
         <button class="btn arrow-back">
-            <img src="./src/img/seta.png" alt="arrow-back" >
+            <img src="./src/img/seta.png" alt="arrow-back" id="btn-back">
         </button>
 
         <ul class="poke-list">
@@ -83,7 +83,7 @@
         </ul>
 
         <button class="btn arrow-foward">
-            <img src="./src/img/seta.png" alt="arrow-foward" >
+            <img src="./src/img/seta.png" alt="arrow-foward" id="btn-foward" >
         </button>
     </main>
 
